fixed white space added label set color palette

--- a/src/components/InfoPanel/panel-styles.css
+++ b/src/components/InfoPanel/panel-styles.css
@@ -19,6 +19,13 @@
 	display: flex;
 	flex-direction: column;
 }
+.label {
+	z-index: 100;
+	max-width: 1024px;
+	position: absolute;
+	top: 88%;
+	left: 10px;
+}
 
 .panel p {
 	text-align: center;
@@ -30,23 +37,28 @@
 	color: #ffffff;
 	text-align: center;
 	background: #1B2446;
+	font-size: 1em;
 }
 
 .panel header p {
 	text-align: center;
 	color: #D4A968;
+	padding: 2%;
+	font-size: 1em;
 }
 
 
 .panel footer  {
 	text-align: left;
 	background: #1B2446;
-	padding: 10%;
+	padding: 2%;
+
 }
 
 .panel footer p {
 	text-align: left;
 	color: #D4A968;
+	font-size: 12px;
 }
 
 .panel .buttons {
@@ -67,13 +79,11 @@
 
 .stats
 {
- background-color: #500000;
- padding: 50%;
+ color: #ffffff;
+ font-size: .9em;
 }
 
 .flag {
 
 		width: 50%;
-	  left: 10px;
-	  padding:  10%;
 }
